feat: Implement initial data extraction from YFinance and basic analysis notebook

--- a/notebooks/yfinance/extract_yfinance_api.ipynb
+++ b/notebooks/yfinance/extract_yfinance_api.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "b0be3935",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "ea516f63",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "<module 'modules.yfinance.yfinance_api' from '/home/diego/Documents/proj_stdr_datamasters_dataengineering/modules/yfinance/yfinance_api.py'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "0a99fb57",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "27df8251",
    "metadata": {},
    "outputs": [
@@ -100,6 +100,288 @@
     "dates = utils.get_dates_to_download(last_date)\n",
     "\n",
     "print(\"Datas para download:\", dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc7d1a3",
+   "metadata": {},
+   "source": [
+    "# Extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ac94780f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yf = yfinance_api.YFinanceAPI(ticker_list[0])\n",
+    "\n",
+    "df_test = yf.download_history(dates[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "726d48c6",
+   "metadata": {},
+   "source": [
+    "# Initial data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "83d47fc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 7)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 10:00:00-03:00</th>\n",
+       "      <td>32.650002</td>\n",
+       "      <td>33.049999</td>\n",
+       "      <td>32.520000</td>\n",
+       "      <td>33.020000</td>\n",
+       "      <td>79400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 10:15:00-03:00</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>33.070000</td>\n",
+       "      <td>32.939999</td>\n",
+       "      <td>32.970001</td>\n",
+       "      <td>36400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 10:30:00-03:00</th>\n",
+       "      <td>32.939999</td>\n",
+       "      <td>33.209999</td>\n",
+       "      <td>32.900002</td>\n",
+       "      <td>33.110001</td>\n",
+       "      <td>76600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 10:45:00-03:00</th>\n",
+       "      <td>33.119999</td>\n",
+       "      <td>33.259998</td>\n",
+       "      <td>32.959999</td>\n",
+       "      <td>33.189999</td>\n",
+       "      <td>128500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 11:00:00-03:00</th>\n",
+       "      <td>33.180000</td>\n",
+       "      <td>33.349998</td>\n",
+       "      <td>33.169998</td>\n",
+       "      <td>33.240002</td>\n",
+       "      <td>79500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Open       High        Low      Close  Volume  \\\n",
+       "Datetime                                                                        \n",
+       "2025-11-11 10:00:00-03:00  32.650002  33.049999  32.520000  33.020000   79400   \n",
+       "2025-11-11 10:15:00-03:00  33.000000  33.070000  32.939999  32.970001   36400   \n",
+       "2025-11-11 10:30:00-03:00  32.939999  33.209999  32.900002  33.110001   76600   \n",
+       "2025-11-11 10:45:00-03:00  33.119999  33.259998  32.959999  33.189999  128500   \n",
+       "2025-11-11 11:00:00-03:00  33.180000  33.349998  33.169998  33.240002   79500   \n",
+       "\n",
+       "                           Dividends  Stock Splits  \n",
+       "Datetime                                            \n",
+       "2025-11-11 10:00:00-03:00        0.0           0.0  \n",
+       "2025-11-11 10:15:00-03:00        0.0           0.0  \n",
+       "2025-11-11 10:30:00-03:00        0.0           0.0  \n",
+       "2025-11-11 10:45:00-03:00        0.0           0.0  \n",
+       "2025-11-11 11:00:00-03:00        0.0           0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 13:00:00-03:00</th>\n",
+       "      <td>32.990002</td>\n",
+       "      <td>33.029999</td>\n",
+       "      <td>32.970001</td>\n",
+       "      <td>33.009998</td>\n",
+       "      <td>108200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 13:15:00-03:00</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>33.040001</td>\n",
+       "      <td>32.990002</td>\n",
+       "      <td>33.020000</td>\n",
+       "      <td>63000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 13:30:00-03:00</th>\n",
+       "      <td>33.020000</td>\n",
+       "      <td>33.119999</td>\n",
+       "      <td>33.009998</td>\n",
+       "      <td>33.099998</td>\n",
+       "      <td>73600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 13:45:00-03:00</th>\n",
+       "      <td>33.090000</td>\n",
+       "      <td>33.119999</td>\n",
+       "      <td>33.040001</td>\n",
+       "      <td>33.040001</td>\n",
+       "      <td>175900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-11 14:00:00-03:00</th>\n",
+       "      <td>33.029999</td>\n",
+       "      <td>33.070000</td>\n",
+       "      <td>33.029999</td>\n",
+       "      <td>33.060001</td>\n",
+       "      <td>28400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Open       High        Low      Close  Volume  \\\n",
+       "Datetime                                                                        \n",
+       "2025-11-11 13:00:00-03:00  32.990002  33.029999  32.970001  33.009998  108200   \n",
+       "2025-11-11 13:15:00-03:00  33.000000  33.040001  32.990002  33.020000   63000   \n",
+       "2025-11-11 13:30:00-03:00  33.020000  33.119999  33.009998  33.099998   73600   \n",
+       "2025-11-11 13:45:00-03:00  33.090000  33.119999  33.040001  33.040001  175900   \n",
+       "2025-11-11 14:00:00-03:00  33.029999  33.070000  33.029999  33.060001   28400   \n",
+       "\n",
+       "                           Dividends  Stock Splits  \n",
+       "Datetime                                            \n",
+       "2025-11-11 13:00:00-03:00        0.0           0.0  \n",
+       "2025-11-11 13:15:00-03:00        0.0           0.0  \n",
+       "2025-11-11 13:30:00-03:00        0.0           0.0  \n",
+       "2025-11-11 13:45:00-03:00        0.0           0.0  \n",
+       "2025-11-11 14:00:00-03:00        0.0           0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df_test.shape) # Cols and Rows count\n",
+    "display(df_test.head()) # First 5 rows\n",
+    "display(df_test.tail()) # Last 5 rows"
    ]
   }
  ],
